--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       
         form * { border: none; }
 
-      input { font-size: 21px; flex: 1; width: 100%; padding: 8px; }
-        input:focus { outline: none; }
+      input,textarea{ font-size: 21px; flex: 1; width: 100%; padding: 8px; overflow-wrap: break-word; resize: none; }
+        input:focus,textarea:focus { outline: none; }
       
       main { 
         width: 33%; 
@@ -23,21 +23,16 @@
     <h1>+⌿÷≢ ←→ {(+⌿⍵)÷(≢⍵)}</h1>
     <h2>Transform tacit APL into dfn form.</h2>
     <main>
-      <form id="field"><input id="expr" /><button type="button" onclick="run();">Help</button></form>
-      <form><input id="prfx" /></form>
-      <form><input id="infx" /></form>
+      <form><input id="expr" autocomplete="off" spellcheck="false" oninput="f()" /></form>
+      <form><textarea readonly id="prfx" /></textarea> </form>
+      <form><textarea readonly id="infx" /></textarea></form>
     </main>
   </center>
 
   <script>
-    document.getElementById("field").addEventListener("submit", (e) => {
-      e.preventDefault();
-      run();
-    });
 
-    run = async () => {
-      const explain = await fetch('explain.aplf').then(r=>r.text())
-
+    f = async () => {
+      const explain = await fetch("explain.aplf").then((r) => r.text());
       let socket = new WebSocket("wss://dyalog.run/api/v0/ws/execute");
       socket.onopen = () =>
         socket.send(
