--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <script src="msgpack.min.js"></script>
     <link rel="stylesheet" href="/index.css">
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml">
   </head>
   <body>
     <h1><code>+⌿÷≢</code> ⇒ <code>{((+⌿)⍵)÷(≢⍵)}Y</code></h1>
