Deleted trailing semi-colon in placeholder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="container">
         <label for="infx"><pre>X f Y</pre> ⇔</label>
-    <pre class="o" id="infx">X{(⍺(+⌿)⍵)÷⍺}Y;</pre>
+    <pre class="o" id="infx">X{(⍺(+⌿)⍵)÷⍺}Y</pre>
     </div>
     </section>
     </main>
