--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       navigator.clipboard.writeText(w.location.toString().replace("#",""))
     }
       if (params.get("f") != null) { 
-        input.value = decodeURIComponent(params.get("f")).replace(/\'/g, "''"); 
+        input.value = decodeURIComponent(params.get("f")); 
       }
 
      f()
