Issue report link, APL333, fix build description in README.md

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     </div>
     </section>
     </main>
+    <footer>
+      Please <a
+        href=https://github.com/awagga/tacit.help/issues/new?assignees=&labels=&template=internal-server-error.md&title=https%3A%2F%2Ftacit.help%2F%3Ff%3D">report</a>
+      "Internal Server Error"s to improve the quality of this system
+    </footer>
   </body>
   <script>
 
@@ -53,8 +58,8 @@
          document.getElementById("prfx").textContent = values[0];
          document.getElementById("infx").textContent = values[1];
         } catch {
-         document.getElementById("prfx").textContent = 'Internal server error.';
-         document.getElementById("infx").textContent = 'Internal server error.';
+         document.getElementById("prfx").textContent = 'Internal Server Error';
+         document.getElementById("infx").textContent = 'Internal Server Error';
        }
       };
     }
