Update translation error message, hide swap button when pane is closed

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
       <div style="display: flex; flex-direction: column">
         <div id="expand" title="Toggle second pane" onclick="Split(this)" class="circle">+</div>
-        <div title="Toggle second pane" onclick="Swap()" class="circle">⇄</div>
         <a title="copy query URL" onclick="Copy()" href="#" class="circle">#</a>
+        <div id="swap" title="Swap f and g" onclick="Swap()" class="circle">⇄</div>
       </div>
 
 
