A B C legend, fix for branch

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       </section>
       
   </main>
+  <sub><pre>Functions: A, B, C,… · Arrays: a, b, c,…</pre></sub>
 
     <footer style="z-index: 1">
       Please <a onclick="Copy()"
