Use sans-serif for UI, improve legend

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
       </section>
       
   </main>
-  <sub><pre>Functions: A, B, C,… · Arrays: a, b, c,…</pre></sub>
+  <pre style="font-family: sans-serif;"><sub>Functions: <p>A, B, C,…</p> <p> &emsp; </p> Arrays: <p>a, b, c,…</p></sub></pre>
 
     <footer style="z-index: 1">
       Please <a onclick="Copy()"
-        href=https://github.com/awagga/tacit.help/issues/new?assignees=&labels=&template=internal-server-error.md&title=>report</a>
-      "Internal Server Error"s to improve the quality of this system
+        href=https://github.com/awagga/tacit.help/issues/new>report</a>
+     errors or incorrect results to improve the quality of this system
     </footer>
   </body>
 
