Make legend into semantic HTML

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
       
   </main>
-  <pre style="font-family: sans-serif;"><sub>Functions: <p>A, B, C,…</p> <p> &emsp; </p> Arrays: <p>a, b, c,…</p></sub></pre>
+    <small style="font-family: sans-serif;">Functions: <code>A</code>, <code>B</code>, <code>B</code>,… &emsp; Arrays: <code>a</code>, <code>b</code>, <code>c</code>,…</small>
 
     <footer style="z-index: 1">
       Please <a onclick="Copy()"
