Switch legend labels

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
       
   </main>
-    <small style="font-family: sans-serif;">Functions: <code>A</code>, <code>B</code>, <code>C</code>,… &emsp; Arrays: <code>a</code>, <code>b</code>, <code>c</code>,…</small>
+    <small style="font-family: sans-serif;">Arrays: <code>A</code>, <code>B</code>, <code>C</code>,… &emsp; Functions: <code>a</code>, <code>b</code>, <code>c</code>,…</small>
 
     <footer style="z-index: 1">
       Please <a onclick="Copy()"
