new GitHub home

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <footer style="z-index: 1">
       Please <a onclick="Copy()"
-        href=https://github.com/awagga/tacit.help/issues/new>report</a>
+        href=https://github.com/abrudz/tacit.help/issues/new>report</a>
      errors or incorrect results to improve the quality of this system
     </footer>
   </body>
